# secure-log-analyzer

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  pyproject.toml
.github/workflows/: ci.yml
analyzer/: cli.py  core.py  detectors.py  filters.py  patterns.json  reporters.py  utils.py
tests/: test_core.py  test_detector.py  test_filter.py
