[project]
name = "secure-log-analyzer"
version = "0.1.0"
description = "CLI tool to analyze logs for suspicious patterns and IPs."
authors = [
    { name = "Yash Ajgaonkar", email = "yash@example.com" }
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "rich>=13.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pre-commit>=3.0.0",
    "black>=23.0.0",
    "ruff>=0.0.241",
    "bandit>=1.7.6",
    "mypy>=1.5.1",
    "pydocstyle>=6.3.0",
    "detect-secrets>=1.4.0"
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["analyzer"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "B", "I", "W"]
ignore = ["E501", "D100", "D104"]
exclude = ["tests/fixtures", "build", "dist"]
fix = true

[tool.bandit]
skips = ["B101"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true
strict_optional = true

[tool.pytest.ini_options]
addopts = "-v"
testpaths = [
    "tests"
]

[project.scripts]
log-analyzer = "analyzer.cli:main"